Bug 1000190 Run string bundle service on main thread for IMAP protocol to avoid threadsafe issues. r+a=Standard8